[gd_scene load_steps=9 format=2]

[ext_resource path="res://Themes/DefaultKeyTheme.tres" type="Theme" id=1]
[ext_resource path="res://Singletons/LevelButton.gd" type="Script" id=2]
[ext_resource path="res://Audio/SFX/OGGs/LevelButtonSelect.ogg" type="AudioStream" id=3]
[ext_resource path="res://Audio/SFX/OGGs/LevelButtonRollover.ogg" type="AudioStream" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.078, 0.6045, 0.78, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.092, 0.713, 0.92, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.368627, 0.368627, 0.368627, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.054902, 0.423529, 0.545098, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="LevelButton" type="Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -24.0
margin_right = 112.0
margin_bottom = 32.0
rect_min_size = Vector2( 176, 40 )
focus_mode = 0
theme = ExtResource( 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
text = "Level 01"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelButtonRolloverAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="LevelButtonSelectAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="button_up" from="." to="." method="_on_LevelButton_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_LevelButton_mouse_entered"]
